--- a/app/src/main/res/layout/activity_login__staff.xml
+++ b/app/src/main/res/layout/activity_login__staff.xml
@@ -26,8 +26,8 @@
         android:id="@+id/emailstaff"
         android:layout_width="307dp"
         android:layout_height="45dp"
-        android:text="Email"
-        android:textColor="#ffffff"
+        android:hint="Email"
+        android:textColorHint="#ffffff"
         android:textSize="25dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -39,9 +39,10 @@
         android:id="@+id/passwordstaff"
         android:layout_width="307dp"
         android:layout_height="45dp"
-        android:text="Password"
-        android:textColor="#ffffff"
+        android:hint="Password"
+        android:textColorHint="#ffffff"
         android:textSize="25dp"
+        android:inputType="textPassword"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -87,7 +88,7 @@
         android:background="@drawable/roundedbtn"
         android:text="Sign In"
         android:textAllCaps="false"
-        android:textColor="#ffffff"
+        android:textColor="#5252CC"
         android:textSize="18dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
