--- a/app/src/main/res/layout/activity_register__staff.xml
+++ b/app/src/main/res/layout/activity_register__staff.xml
@@ -14,7 +14,7 @@
         android:background="@drawable/roundedbtn"
         android:text="Sign Up"
         android:textAllCaps="false"
-        android:textColor="#ffffff"
+        android:textColor="#5252CC"
         android:textSize="18dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -24,7 +24,7 @@
         app:layout_constraintVertical_bias="0.862" />
 
     <TextView
-        android:id="@+id/textViewsignupstaff"
+        android:id="@+id/textViewsigninstaff"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Signin"
@@ -73,8 +73,8 @@
         android:id="@+id/editnamestaff"
         android:layout_width="307dp"
         android:layout_height="45dp"
-        android:text="Name"
-        android:textColor="#ffffff"
+        android:hint="Name"
+        android:textColorHint="#ffffff"
         android:textSize="25dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -82,25 +82,14 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.51"/>
 
-    <EditText
-        android:id="@+id/editnconfirmpasswordstaff"
-        android:layout_width="307dp"
-        android:layout_height="45dp"
-        android:text="Confirm password"
-        android:textColor="#ffffff"
-        android:textSize="25dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.781" />
 
     <EditText
         android:id="@+id/editnpasswordstaff"
         android:layout_width="307dp"
         android:layout_height="45dp"
-        android:text="Password"
-        android:textColor="#ffffff"
+        android:hint="Password"
+        android:textColorHint="#ffffff"
+        android:inputType="textPassword"
         android:textSize="25dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -112,8 +101,8 @@
         android:id="@+id/editemailstaff"
         android:layout_width="307dp"
         android:layout_height="45dp"
-        android:text="Email"
-        android:textColor="#ffffff"
+        android:hint="Email"
+        android:textColorHint="#ffffff"
         android:textSize="25dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
