--- a/app/src/main/res/layout/activity_login__admin.xml
+++ b/app/src/main/res/layout/activity_login__admin.xml
@@ -26,8 +26,8 @@
         android:id="@+id/emailadmin"
         android:layout_width="307dp"
         android:layout_height="48dp"
-        android:text="Email"
-        android:textColor="#ffffff"
+        android:hint="Email"
+        android:textColorHint="#ffffff"
         android:textSize="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -39,8 +39,9 @@
         android:id="@+id/passwordadmin"
         android:layout_width="307dp"
         android:layout_height="48dp"
-        android:text="Password"
-        android:textColor="#ffffff"
+        android:hint="Password"
+        android:textColorHint="#ffffff"
+        android:inputType="textPassword"
         android:textSize="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -84,7 +85,7 @@
         android:background="@drawable/roundedbtn"
         android:text="Sign In"
         android:textAllCaps="false"
-        android:textColor="#ffffff"
+        android:textColor="#5252CC"
         android:textSize="18dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -97,7 +98,7 @@
         android:id="@+id/forgotadmin"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Forgot password"
+        android:text="Forgot password?"
         android:textColor="#ffffff"
         android:textSize="15dp"
         app:layout_constraintBottom_toBottomOf="parent"
