--- a/app/src/main/res/layout/activity_staff.xml
+++ b/app/src/main/res/layout/activity_staff.xml
@@ -1,97 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorPrimary"
-    tools:context=".Staff">
-
-    <RelativeLayout
-        android:id="@+id/linearLayout"
-        android:layout_width="350dp"
-        android:layout_height="500dp"
-        android:layout_marginTop="136dp"
-        android:background="#ffffff"
-        android:orientation="vertical"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.491"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-
-        <RelativeLayout
-            android:id="@+id/students"
-            android:layout_width="120dp"
-            android:layout_height="120dp"
-            android:background="@color/colorAccent"
-            android:layout_marginTop="30dp"
-            android:layout_marginLeft="30dp">
-
-            <Button
-                android:id="@+id/childrenbtn"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:text="Children">
-            </Button>
-
-        </RelativeLayout>
-
-        <RelativeLayout
-            android:id="@+id/activities"
-            android:layout_width="120dp"
-            android:layout_height="120dp"
-            android:background="@color/colorAccent"
-            android:layout_toRightOf="@id/students"
-            android:layout_marginTop="30dp"
-            android:layout_marginLeft="40dp"
-            >
-
-            <Button
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:text="Activities">
-            </Button>
-
-        </RelativeLayout>
-
-        <RelativeLayout
-            android:id="@+id/attendance"
-            android:layout_width="120dp"
-            android:layout_height="120dp"
-            android:background="@color/colorAccent"
-            android:layout_below="@id/students"
-            android:layout_marginTop="30dp"
-            android:layout_marginLeft="30dp"
-            >
-
-            <Button
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:text="Attendance">
-            </Button>
-
-        </RelativeLayout>
-
-        <RelativeLayout
-            android:layout_width="120dp"
-            android:layout_height="120dp"
-            android:background="@color/colorAccent"
-            android:layout_toRightOf="@id/attendance"
-            android:layout_below="@id/activities"
-            android:layout_marginTop="30dp"
-            android:layout_marginLeft="40dp"
-            >
-
-            <Button
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:text="Parents">
-            </Button>
-
-        </RelativeLayout>
+    android:background="@color/pbcolor1"
+    android:fitsSystemWindows="true"
+    tools:openDrawer="start">
 
 
-    </RelativeLayout>
+    <include
+        layout="@layout/appbar_staff"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <com.google.android.material.navigation.NavigationView
+        android:id="@+id/nav_view"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_gravity="start"
+        android:fitsSystemWindows="true"
+        tools:layout_editor_absoluteX="1dp"
+        tools:layout_editor_absoluteY="1dp"
+        app:headerLayout="@layout/nav_header_staff"
+        app:menu="@menu/drawer_staff"/>
+
+
+</androidx.drawerlayout.widget.DrawerLayout>
