--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,6 +5,5 @@
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorAccent">#03DAC5</color>
     <color name="btnColor">#ffffff</color>
-    <color name="pbcolor1">#ffffff</color>
-    <color name="pbcolor2">#6200EE</color>
+    <color name="white">#FFFFFF</color>
 </resources>
