--- a/app/src/main/res/layout/fragment_child_class_list.xml
+++ b/app/src/main/res/layout/fragment_child_class_list.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:theme="@style/AppTheme.NoActionBar"
-    tools:context="Parent_child_list">
+    tools:context=".ParentChildList">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/child_class_list"
