--- a/app/src/main/res/layout/nav_header_admin.xml
+++ b/app/src/main/res/layout/nav_header_admin.xml
@@ -23,7 +23,7 @@
         app:srcCompat="@drawable/ic_user" />
 
     <TextView
-        android:id="@+id/name_parent"
+        android:id="@+id/name_admin"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
@@ -34,7 +34,7 @@
         android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
 
     <TextView
-        android:id="@+id/email_parent"
+        android:id="@+id/email_admin"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textColor="#ffffff"
