--- a/app/src/main/res/layout/child_list_card.xml
+++ b/app/src/main/res/layout/child_list_card.xml
@@ -4,15 +4,19 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="horizontal"
     android:padding="10dp"
+    android:background="#ffffff"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <ImageView
+    <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/child_list_pic"
-        android:layout_width="80dp"
-        android:layout_height="80dp"
-        android:scaleType="fitXY"
-        app:srcCompat="@drawable/blank_profile_pic" />
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
+        app:srcCompat="@drawable/blank_profile_pic"
+        app:civ_border_width="2dp"
+        app:civ_border_color="@color/colorAccent"/>
+
 
     <TextView
         android:id="@+id/child_list_name"
@@ -21,8 +25,12 @@
         android:layout_weight="1"
         android:gravity="left|center"
         android:padding="10dp"
+        android:layout_marginLeft="5dp"
         android:text="TextView"
-        android:textColor="@color/colorPrimary"
-        android:textSize="30sp" />
+        android:textColor="@color/colorAccent"
+        android:textSize="15dp" />
+
+
+
 
 </LinearLayout>
