--- a/app/src/main/res/layout/fragment_child_feed.xml
+++ b/app/src/main/res/layout/fragment_child_feed.xml
@@ -26,16 +26,21 @@
                 app:layout_collapseMode="parallax"
                 app:layout_collapseParallaxMultiplier="0.7">
 
-                <ImageView
+                <de.hdodenhof.circleimageview.CircleImageView
                     android:id="@+id/expandedImage"
+                    xmlns:app="http://schemas.android.com/apk/res-auto"
+                    android:layout_marginTop="15dp"
+                    android:layout_gravity="center"
                     android:layout_width="100dp"
                     android:layout_height="100dp"
-                    android:layout_gravity="center"
-                    android:scaleType="centerCrop"
-                    android:src="@drawable/icon_nap_plain"
+                    app:srcCompat="@drawable/blank_profile_pic"
+                    app:civ_border_width="2dp"
                     app:layout_collapseMode="parallax"
                     android:transitionName="ProPicShared"
-                    app:layout_collapseParallaxMultiplier="0.7" />
+                    app:layout_collapseParallaxMultiplier="0.7"
+                    app:civ_border_color="@color/colorAccent"/>
+
+
             </FrameLayout>
 
             <androidx.appcompat.widget.Toolbar
