--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,7 +3,7 @@
 
     <color name="colorPrimary">#6200EE</color>
     <color name="colorPrimaryDark">#3700B3</color>
-    <color name="colorAccent">#192965</color>
+    <color name="colorAccent">#2b580c</color>
     <color name="btnColor">#ffffff</color>
     <color name="white">#FFFFFF</color>
 </resources>
